--- a/caddy-config/TestbedTCP/CaddyFile
+++ b/caddy-config/TestbedTCP/CaddyFile
@@ -7,7 +7,7 @@ www.goDASHbed.org:443 {
      insecure_skip_verify
   }
   # these are our certs
- tls <godash folder location>/godash/http/certs/cert.pem <godash folder location>/godash/http/certs/key.pem
+ tls <godash folder location>/goDASH/godash/http/certs/cert.pem <godash folder location>/goDASH/godash/http/certs/key.pem
   gzip
  # needed for location of content to offer
   root /var/www/html
