--- a/config/configure.json
+++ b/config/configure.json
@@ -14,6 +14,6 @@
         "hls" : "off",
         "expRatio" : 0.2,
         "quic" : "off",
-        "url" : "[http://www.goDASHbed.org/4K_dataset/4_sec/x264/bbb/DASH_Files/full/bbb_enc_x264_dash.mpd]",
+        "url" : "[https://www.godashbed.org/4K_dataset/4_sec/x264/bbb/DASH_Files/full/bbb_enc_x264_dash.mpd]",
         "useTestbed" : "on"
 }
