--- a/config/configure.json
+++ b/config/configure.json
@@ -5,15 +5,18 @@
         "initBuffer" : 2,
         "maxBuffer" : 60,
         "maxHeight" : 3000,
-        "streamDuration" : 60,
-        "storeDash" : "347985",
+        "streamDuration" : 10,
+        "storeDash" : "off",
+        "outputFolder" : "123456",
         "logFile" : "log_file_2",
         "getHeaders" : "off",
         "terminalPrint" : "on",
-        "printHeader" : "{\"Algorithm\":\"off\",\"Seg_Dur\":\"off\",\"Codec\":\"off\",\"Width\":\"on\",\"Height\":\"on\",\"FPS\":\"off\",\"Play_Pos\":\"off\",\"RTT\":\"off\",\"Seg_Repl\":\"off\",\"Protocol\":\"off\"}",
+        "printHeader" : "{\"Algorithm\":\"off\",\"Seg_Dur\":\"off\",\"Codec\":\"off\",\"Width\":\"on\",\"Height\":\"on\",\"FPS\":\"off\",\"Play_Pos\":\"off\",\"RTT\":\"off\",\"Seg_Repl\":\"off\",\"Protocol\":\"on\",\"P.1203\":\"on\",\"Clae\":\"on\",\"Duanmu\":\"on\",\"Yin\":\"on\",\"Yu\":\"on\"}",
         "hls" : "off",
         "expRatio" : 0.2,
         "quic" : "off",
-        "url" : "[https://www.godashbed.org/4K_dataset/4_sec/x264/bbb/DASH_Files/full/bbb_enc_x264_dash.mpd]",
-        "useTestbed" : "on"
+        "url" : "[https://www.godashbed.org/4K_dataset/4_sec/x264/bbb/DASH_Files/full/bbb_enc_x264_dash_video.mpd]",
+        "useTestbed" : "on",
+        "QoE" : "on",
+        "serveraddr" : "on"
 }
